exception logger and utils added

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-pandas
+pandas 
 mlflow==2.2.2
 notebook
+numpy
 scikit-learn
 matplotlib
-python-box==6.0.2
+python-box==4.1.0
 pyYAML
 tqdm
 ensure==1.0.2
